[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/level/prefabs/turn_panel/themes/primary.tres" type="Theme" id=1]
[ext_resource path="res://levels/level/prefabs/turn_panel/scripts/turn-panel.gd" type="Script" id=2]

[node name="TurnPanel" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -20.0
margin_right = 200.0
margin_bottom = 20.0
rect_min_size = Vector2( 400, 0 )
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="RoundCountLabel" type="Label" parent="."]
margin_right = 400.0
margin_bottom = 59.0
grow_horizontal = 2
text = "Turn x of 50"
align = 1

[node name="TimerLabel" type="Label" parent="."]
margin_top = 63.0
margin_right = 400.0
margin_bottom = 122.0
grow_horizontal = 2
text = "00:00"
align = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
